[tool.poetry]
name = "node-energy-pre-commit-hooks"
version = "0.2.1"
description = ""
authors = ["Lars Rinn <lars.rinn@node.energy>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
import-linter = "^1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
pre-commit = "^2.1.0"
mypy = "^0.761"

[tool.poetry.scripts]
liccheck-pipenv = "node_energy_pre_commit_hooks.liccheck_pipenv:main"
import-linter = "node_energy_pre_commit_hooks.import_linter:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

